2006-01-22  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0-rc5.

2006-01-22  Dotan Barak  <dotanb@mellanox.co.il>

	* examples/devinfo.c (main): Make ibv_devinfo list all IB devices
	by default, rather than the first device only.

2006-01-20  Roland Dreier  <rdreier@cisco.com>

	* examples/rc_pingpong.c, examples/uc_pingpong.c,
	examples/srq_pingpong.c: Add "-m/--mtu=" option to set path MTU.
	(Based on a patch from Ralph Campbell <ralphc@pathscale.com>)

	* examples/pingpong.c, examples/pingpong.h: Create generic
	pingpong files so that we can start factoring out common code from
	the pingpong examples.  Start with functions to convert MTU to an
	IBV enum value.

2006-01-17  Ralph Campbell  <ralphc@pathscale.com>

	* examples/rc_pingpong.c (main), examples/srq_pingpong.c (main),
	examples/uc_pingpong.c (main), examples/ud_pingpong.c (main): Fix
	race when using CQ events by arming CQ before allowing remote side
	to start sending.

2006-01-06  Roland Dreier  <rdreier@cisco.com>

	* examples/srq_pingpong.c (main): Fix SRQ example to avoid
	problems with many QPs and events.  Based on a patch from Dotan
	Barak (who also found the problem).

2006-01-06  Ralph Campbell  <ralphc@pathscale.com>

	* examples/rc_pingpong.c (main), examples/srq_pingpong.c (main),
	examples/uc_pingpong.c (main), examples/ud_pingpong.c (main): Fix
	test of return value of ibv_poll_cq().

2006-01-04  Dotan Barak  <dotanb@mellanox.co.il>

	* include/infiniband/verbs.h: Fix mask names in description of
	ibv_modify_srq.

2006-01-04  Michael S. Tsirkin  <mst@mellanox.co.il>

	* src/init.c (ibverbs_init): Fix ibverbs_init for multiple adapters.
	Noted by Christoph Raisch.

2005-12-15  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/verbs.h: Document that devices must be opened
	before calling ibv_free_device_list().
	
	* src/verbs.c (ibv_create_srq): Not all provider libraries will
	support SRQs, so check if the create_srq method is defined before