@@ -38,5 +38,6 @@
 #include <infiniband/verbs.h>
 
 enum ibv_mtu pp_mtu_to_enum(int mtu);
+uint16_t pp_get_local_lid(struct ibv_context *context, int port);
 
 #endif /* IBV_PINGPONG_H */
